--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node- r dotenv/config ./node_modules/ .bin/react-sripts build dotenv_convig_path=.env",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
