--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "node- r dotenv/config ./node_modules/ .bin/react-sripts build dotenv_convig_path=.env",
+    "build": "node -r dotenv/config ./node_modules/ .bin/react-sripts build dotenv_config_path=.env",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
